Docker dev (#5)
* Initial commit

* Initial commit

* Creating docker setup scripts

* Move to directory where docker expects them

* Updates to match rfd, not bam

* Getting the docker config scripts in place

* Initial commit of docker files.  Corrections probably needed

* Rolled lem_scan convert script into create

* Merged convert script updates into create script

* Added missing type diamond

* Update lower case run to RUN

* Combine/simplify SQL setup scripts

* Add initial step for production use

* Initial commit of development/test data

* Don't persist oracle container data

* Ignore more IDE stuff

* Added commands rfd_comments table

* Initial commit of config classes

* Initial commit of config classes

* Fixed typo in method name

* Added two endpoints to streamline unittests

* Made error-trapping more generic

* Updated error trapping on missing response values.

* Added simple end points for integration testing

* Update to use latest myquery host

* Initial commit to enable tests w/o VPN

* Update service to work with new myquery/mysampler endpoint

* Fixed integer to decimal output bug

* Update value to match myquery URL

* Update to match local test url

* Factor out processCEDResponse

* Factor out CED response processing

* Switch to AppConfig for URLs

* Minor IDE suggested improvements, misspellings, javadoc updates

* Switch to use AppConfig for URLs, minor generics/type fixes

* Switch to AppConfig for URLs, javadoc updates, factor out common code

* Updated to match test config file contents

* Update to match to myquery response format

* Switched to bare-bones JeffersonLab wildfly image

* Initial commit - server needs email config info

* Edit container name to be rfd

* Add java compile options, smoothness, version updates

* Add myquery and mya containers

* Fix type in method call

* StringBuilder optimizations, minor changes

* Fix KEYCLOAK_